# UnityPlotRender

./: CMakeLists.txt
include/: PlatformBase.h  RenderAPI.h
include/Unity/: IUnityGraphics.h  IUnityGraphicsD3D11.h  IUnityGraphicsD3D12.h  IUnityGraphicsD3D9.h  IUnityGraphicsMetal.h  IUnityGraphicsVulkan.h  IUnityInterface.h
include/dataset/: Dataset.h  NormalizedDataset.h  Summary.h
include/plot/: Plot.h  PlotManager.h
src/: RenderAPI.cpp  RenderAPI_OpenGLCoreES.cpp  UnityPlotRenderPlugin.cpp
src/dataset/: Dataset.cpp  NormalizedDataset.cpp  Summary.cpp
src/plot/: Plot.cpp  PlotManager.cpp
